--- a/_includes/header.html
+++ b/_includes/header.html
@@ -1,1 +1,9 @@
+<header>
+  <div class="logo">
+    <!-- Display the logo -->
+    <a href="{{ site.url }}">
+      <img src="{{ site.baseurl }}{{ site.logo }}" alt="Federico Dattila Logo" style="height: 50px;">
+    </a>
+  </div>
+</header>
 
