--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,1 +1,6 @@
-
+/* In your custom CSS file */
+.logo img {
+  height: 50px; /* Adjust size */
+  width: auto;
+  margin-right: 15px; /* Adjust spacing */
+}
