--- a/_includes/heater.html
+++ b/_includes/heater.html
@@ -5,3 +5,10 @@
     <li><a href="{{ url }}">{{ title }}</a></li>
   {% endfor %}
 </ul>
+
+{% assign sorted_pages = site.pages | sort: "order" %}
+<ul>
+  {% for page in sorted_pages %}
+    <li><a href="{{ page.url }}">{{ page.title }}</a></li>
+  {% endfor %}
+</ul>
